# Azure-Compliance-Engine

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: requirements.txt
backend/scripts/: index_documents.py
backend/src/graph/: nodes.py
